# eventhive

./: .replit  CRITICAL_FIXES.md  JOB_EVALUATION_REPORT.md  ReadMe.md  SECURITY_FIXES_APPLIED.md  package-lock.json  package.json  pyproject.toml  runproject.py
backend/: db.sqlite3  requirements.txt
backend/event_tracker/: asgi.py  settings.py  urls.py  wsgi.py
backend/events/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_user_unique_lower_email.py  0003_alter_user_managers_remove_user_username.py  0004_event_share_id.py  0005_alter_event_created_at_alter_event_date_time_and_more.py  0006_alter_event_location.py  0007_alter_event_location.py
backend/staticfiles/css/: style.css
backend/staticfiles/js/: app.js
backend/templates/events/: register.html
frontend/event-tracker-ui/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/event-tracker-ui/src/: App.css  App.jsx  index.css
frontend/event-tracker-ui/src/components/: LoadingSpinner.jsx  Navbar.jsx  Tutorial.jsx  TutorialButton.jsx
frontend/event-tracker-ui/src/contexts/: AuthContext.jsx  QueryProvider.jsx
frontend/event-tracker-ui/src/pages/: CreateEventPage.jsx  DashboardPage.jsx  EventDetailPage.jsx  EventsPage.jsx  LoginPage.jsx  PublicEventPage.jsx  RegisterPage.jsx
frontend/event-tracker-ui/src/utils/: api.js
